--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Landpage Sou Seguros - Vida em Grupo",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
@@ -19,7 +21,19 @@
   "homepage": "https://github.com/paratiuid/sou-vida-em-grupo#readme",
   "dependencies": {
     "next": "^10.2.3",
+    "next-images": "^1.7.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.9",
+    "@types/styled-components": "^5.1.9",
+    "babel-plugin-inline-react-svg": "^2.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.0",
+    "sass": "^1.34.0",
+    "typescript": "^4.3.2"
   }
 }
