--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/paratiuid/sou-vida-em-grupo#readme",
   "dependencies": {
+	"bootstrap": "4.6.0",
     "next": "^10.2.3",
     "next-images": "^1.7.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.0"
   },
@@ -33,7 +35,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.0",
-    "sass": "^1.34.0",
+    "sass": "^1.34.1",
     "typescript": "^4.3.2"
   }
 }
