--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/paratiuid/sou-vida-em-grupo#readme",
   "dependencies": {
-	"bootstrap": "4.6.0",
+    "bootstrap": "4.6.0",
     "next": "^10.2.3",
     "next-images": "^1.7.0",
     "react": "^17.0.2",
@@ -32,8 +32,10 @@
     "@types/react": "^17.0.9",
     "@types/styled-components": "^5.1.9",
     "babel-plugin-inline-react-svg": "^2.0.1",
+    "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "node": "^16.1.0",
     "prettier": "^2.3.0",
     "sass": "^1.34.1",
     "typescript": "^4.3.2"
