--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.8.4",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
